--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
   <title>Clearance App PWA</title>
   <!-- Link to the manifest -->
   <link rel="manifest" href="manifest.json">
+  <link rel="manifest" href="assetlinks.json">
   <!-- Link to CSS (optional) -->
   <link rel="stylesheet" href="styles.css">
 </head>
